--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,5 +25,8 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Print Github Ref
+        run: echo "$GITHUB_REF"
+
       - name: Build with Gradle
         run: ./gradlew build
