--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,7 @@ on:
       - '[0-9]+.[0-9]+.[0-9]+'
 permissions:
   contents: write
+  packages: write
 
 jobs:
   publish:
@@ -41,7 +42,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: $GITHUB_REF
+          tag_name: $GITHUB_REF_NAME
           release_name: "Release $GITHUB_REF_NAME"
           draft: false
           prerelease: false
