--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,7 +42,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: $GITHUB_REF_NAME
-          release_name: "Release $GITHUB_REF_NAME"
+          tag_name: ${{ github.ref.name }}
+          release_name: Release ${{ github.ref.name }}
           draft: false
           prerelease: false
