--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - name: Checkout repository
@@ -27,6 +27,9 @@ jobs:
 
       - name: Print Github Ref
         run: echo "$GITHUB_REF"
+
+      - name: Run extra api dump
+        run: ./gradlew apiDump
 
       - name: Build with Gradle
         run: ./gradlew build
