--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,8 @@ jobs:
   publish:
     name: Publish
     runs-on: macos-latest
+    env:
+      RELEASE_NAME: $GITHUB_REF_NAME
 
     steps:
       - name: Checkout repository
@@ -45,7 +47,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref.name }}
-          release_name: Release ${{ github.ref.name }}
+          tag_name: $RELEASE_NAME
+          release_name: Release $RELEASE_NAME
           draft: false
           prerelease: false
