--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -23,3 +23,5 @@ jobs:
           git push origin --tags
           echo "Incrementing latest tag (PATCH) finished!"
 
+# curl -s https://api.github.com/repos/dkluske/HealthKMP/releases/latest | grep -oP '(?<="tag_name": ")[^"]*' | sed -E 's/([0-9]+\.)([0-9]+)(\.[0-9]+)/echo "\1$((\2+1))\3"/e' -> for minor level increments
+# curl -s https://api.github.com/repos/dkluske/HealthKMP/releases/latest | grep -oP '(?<="tag_name": ")[^"]*' | sed -E 's/([0-9]+)(\.[0-9]+\.[0-9]+)/echo "$((\1+1))\2"/e' -> for major level increments
