--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -17,9 +17,13 @@ jobs:
       - name: Create new tag
         run: |
           echo "Starting to fetch latest tag"
-          NEW_TAG=$(curl -s https://api.github.com/repos/dkluske/HealthKMP/releases/latest | grep -oP '(?<="tag_name": ")[^"]*' | sed -E 's/([0-9]+\.[0-9]+\.)([0-9]+)/echo "\1$((\2+1))"/e')
+          LATEST_TAG=$(curl -s https://api.github.com/repos/dkluske/HealthKMP/releases/latest | grep -oE '"tag_name": "[^"]*"' | cut -d'"' -f4)
+          BASE=$(echo "$LATEST_TAG" | grep -oE '^[0-9]+\.[0-9]+\.')
+          PATCH=$(echo "$LATEST_TAG" | grep -oE '[0-9]+$')
+          NEW_PATCH=$((PATCH + 1))
+          NEW_TAG="${BASE}${NEW_PATCH}"
           echo "New incremented patch tag: $NEW_TAG"
-          git tag $NEW_TAG
+          git tag "$NEW_TAG"
           git push origin --tags
           echo "Incrementing latest tag (PATCH) finished!"
 
